# loan-default-prediction-mlops

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: aws.yaml  github-docker-cicd.yaml
.streamlit/: config.toml
models/: lightgbm_01.pkl  lightgbm_02.pkl  lightgbm_03.pkl  logistic_regression_01.pkl  logistic_regression_02.pkl  logistic_regression_03.pkl  mlruns_data.json  random_forest_01.pkl  random_forest_02.pkl  xgboost_model_01.pkl  xgboost_model_02.pkl  xgboost_model_03.pkl  xgboost_model_04.pkl  xgboost_model_06.pkl
notebooks/: EDA.ipynb  EDA.md
src/: __init__.py
src/app/: __init__.py  streamlit_app.py
src/app/components/: __init__.py  mlflow_utils.py  repo_button.py  utils.py
src/app/layout/: __init__.py  layout0.py  layout1.py  layout2.py  layout3.py  layout4.py  layout5.py  layout6.py
src/data/: __init__.py  data_loader.py  preprocess.py
src/models/: __init__.py  lightgbm_pipeline.py  logr_pipeline.py  rf_pipeline.py  skeleton.py  xgboost_pipeline.py
src/visualization/: __init__.py  visualize.py
